--- a/design/frontend/Magebit/learning/Magento_Catalog/web/template/input-counter.html
+++ b/design/frontend/Magebit/learning/Magento_Catalog/web/template/input-counter.html
@@ -13,7 +13,7 @@
     />
     <span>
         <button class="magebit-qty-input-button" data-bind="click:increaseQty">
-            <span>+</span>
+            <span class="magebit-qty-input-plus">+</span>
         </button>
     </span>
 </div>
