--- a/design/frontend/Magebit/learning/Magento_Catalog/web/css/source/_extend.less
+++ b/design/frontend/Magebit/learning/Magento_Catalog/web/css/source/_extend.less
@@ -43,6 +43,11 @@
 
     .magebit-qty-input-plus {
       color: #ff5501;
+      font-size: 20px;
+    }
+
+    .magebit-qty-input-minus {
+      font-size: 20px;
     }
 
     .magebit-in-stock-container {
