--- a/design/frontend/Magebit/learning/Magento_Catalog/web/template/input-counter.html
+++ b/design/frontend/Magebit/learning/Magento_Catalog/web/template/input-counter.html
@@ -1,7 +1,7 @@
 <div class="magebit-qty-container">
     <span>
         <button class="magebit-qty-input-button" data-bind="click:decreaseQty">
-            <span>-</span>
+            <span class="magebit-qty-input-minus">-</span>
         </button>
     </span>
     <input class="magebit-qty-input"
