code review fixes

--- a/design/frontend/Magebit/learning/Magento_Catalog/web/css/source/_extend.less
+++ b/design/frontend/Magebit/learning/Magento_Catalog/web/css/source/_extend.less
@@ -1,9 +1,11 @@
 .catalog-product-view {
 
   //General settings
-  button {
-    box-shadow: none !important;
-    border: none !important;
+  .actions {
+    button {
+      box-shadow: none;
+      border: none;
+    }
   }
 
   .magebit-full-width {
